--- a/index.html
+++ b/index.html
@@ -1,13 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Mini Mansion Maker</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>🏠 Mini Mansion Maker</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background-color: #111;
+      font-family: Arial, sans-serif;
+      color: white;
+    }
+    canvas {
+      width: 100%;
+      height: 100%;
+      touch-action: none;
+    }
+    h1 {
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      margin: 0;
+      font-size: 24px;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+    .controls {
+      position: absolute;
+      top: 50px;
+      left: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 10px;
+      border-radius: 5px;
+      z-index: 10;
+    }
+    select, button {
+      padding: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 5px;
+      border: none;
+      background: #333;
+      color: white;
+    }
+    button:hover {
+      background: #555;
+    }
+    .light-theme {
+      background-color: #ddd;
+      color: black;
+    }
+    .light-theme .controls {
+      background: rgba(255, 255, 255, 0.5);
+    }
+    .light-theme select, .light-theme button {
+      background: #fff;
+      color: black;
+      border: 1px solid #ccc;
+    }
+    .light-theme button:hover {
+      background: #eee;
+    }
+    #touchControls {
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      pointer-events: none;
+    }
+    #joystick, #actionButtons {
+      pointer-events: auto;
+    }
+    #actionButtons {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-right: 20px;
+    }
+  </style>
 </head>
 <body>
   <h1>🏠 Mini Mansion Maker</h1>
-
   <div class="controls">
     <select id="blockType" aria-label="Select block type">
       <option value="bedroom">Bedroom</option>
@@ -29,9 +106,22 @@
     <button onclick="loadLayout()" aria-label="Load mansion layout">Load</button>
     <button onclick="toggleTheme()" aria-label="Toggle light/dark theme">Toggle Theme</button>
   </div>
-
-  <div id="grid" aria-label="Mansion grid container" role="grid"></div>
-
-  <script src="script.js"></script>
+  <div id="touchControls">
+    <canvas id="joystick" width="100" height="100"></canvas>
+    <div id="actionButtons">
+      <button onclick="placeBlockTouch()" aria-label="Place block">Place</button>
+      <button onclick="removeBlockTouch()" aria-label="Remove block">Remove</button>
+    </div>
+  </div>
+  <canvas id="gameCanvas"></canvas>
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://unpkg.com/three@0.154.0/build/three.module.js?module",
+        "three/examples/jsm/controls/PointerLockControls.js": "https://unpkg.com/three@0.154.0/examples/jsm/controls/PointerLockControls.js?module"
+      }
+    }
+  </script>
+  <script type="module" src="game.js"></script>
 </body>
 </html>
