--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     body {
       margin: 0;
       overflow: hidden;
-      background-color: #111;
-      font-family: Arial, sans-serif;
-      color: white;
+      background-color: #1e1e1e; /* Dark mode default */
+      font-family: sans-serif;
+      color: #eee;
+      user-select: none;
+      transition: background 0.3s;
     }
     canvas {
       width: 100%;
@@ -31,6 +33,7 @@
       left: 20px;
       display: flex;
       flex-direction: column;
+      flex-wrap: wrap;
       gap: 10px;
       background: rgba(0, 0, 0, 0.5);
       padding: 10px;
@@ -38,31 +41,51 @@
       z-index: 10;
     }
     select, button {
-      padding: 8px;
-      font-size: 16px;
-      cursor: pointer;
+      font-size: 1em;
+      padding: 8px 12px;
       border-radius: 5px;
-      border: none;
+      border: 1px solid #666;
       background: #333;
-      color: white;
+      color: #eee;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    select {
+      min-width: 160px;
+    }
+    select:focus, button:focus {
+      outline: 3px solid #a48fd4;
+      outline-offset: 2px;
     }
     button:hover {
-      background: #555;
+      background: #d2c4ec;
+    }
+    .dark-mode {
+      background-color: #1e1e1e;
+      color: #eee;
+    }
+    .dark-mode .controls {
+      background: rgba(0, 0, 0, 0.5);
+    }
+    .dark-mode select, .dark-mode button {
+      background: #333;
+      color: #eee;
+      border-color: #666;
     }
     .light-theme {
-      background-color: #ddd;
-      color: black;
+      background-color: #f0f0f0;
+      color: #000;
     }
     .light-theme .controls {
       background: rgba(255, 255, 255, 0.5);
     }
     .light-theme select, .light-theme button {
       background: #fff;
-      color: black;
-      border: 1px solid #ccc;
+      color: #000;
+      border: 1px solid #999;
     }
     .light-theme button:hover {
-      background: #eee;
+      background: #d2c4ec;
     }
     #touchControls {
       position: absolute;
@@ -81,9 +104,19 @@
       gap: 10px;
       margin-right: 20px;
     }
+    #actionButtons button {
+      border: 1px solid #666;
+      background: #333;
+      color: #eee;
+    }
+    .light-theme #actionButtons button {
+      border: 1px solid #999;
+      background: #fff;
+      color: #000;
+    }
   </style>
 </head>
-<body>
+<body class="dark-mode">
   <h1>🏠 Mini Mansion Maker</h1>
   <div class="controls">
     <select id="blockType" aria-label="Select block type">
