--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
     body {
       margin: 0;
       overflow: hidden;
-      background-color: #1e1e1e; /* Dark mode default */
+      background-color: #1e1e1e;
       font-family: sans-serif;
       color: #eee;
       user-select: none;
       transition: background 0.3s;
     }
-    canvas {
+    canvas#gameCanvas {
+      display: block;
       width: 100%;
       height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
       touch-action: none;
+    }
+    canvas#joystick {
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+      width: 100px;
+      height: 100px;
     }
     h1 {
       position: absolute;
